// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleOtpInput contents should render \`inputClasses\`, \`type\` correctly to inner inputs 1`] = `
<div class="simple-otp-input empty">
  <div class="single-input-container"><input autocomplete="one-time-code" type="number" inputmode="numeric" data-testid="otp-single-input-0" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="number" inputmode="numeric" data-testid="otp-single-input-1" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="number" inputmode="numeric" data-testid="otp-single-input-2" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="number" inputmode="numeric" data-testid="otp-single-input-3" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="number" inputmode="numeric" data-testid="otp-single-input-4" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="number" inputmode="numeric" data-testid="otp-single-input-5" class="otp-single-input some-class or-more-class"></div>
</div>
`;

exports[`SimpleOtpInput contents should render \`inputProps\`, correctly to inner inputs 1`] = `
<div class="simple-otp-input empty">
  <div class="single-input-container"><input autocomplete="one-time-code" type="text" inputmode="numeric" pattern="[0-9]*" data-testid="otp-single-input-0" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="numeric" pattern="[0-9]*" data-testid="otp-single-input-1" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="numeric" pattern="[0-9]*" data-testid="otp-single-input-2" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="numeric" pattern="[0-9]*" data-testid="otp-single-input-3" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="numeric" pattern="[0-9]*" data-testid="otp-single-input-4" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="numeric" pattern="[0-9]*" data-testid="otp-single-input-5" class="otp-single-input"></div>
</div>
`;

exports[`SimpleOtpInput contents should render correct default 1`] = `
<div class="simple-otp-input empty">
  <div class="single-input-container"><input autocomplete="one-time-code" type="text" data-testid="otp-single-input-0" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-1" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-2" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-3" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-4" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-5" class="otp-single-input"></div>
</div>
`;

exports[`SimpleOtpInput contents should render correctly \`withExtraSpan\` 1`] = `
<div class="simple-otp-input">
  <div class="single-input-container"><input autocomplete="one-time-code" type="text" data-testid="otp-single-input-0" class="otp-single-input"><span class="extra-span"></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-1" class="otp-single-input"><span class="extra-span"></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-2" class="otp-single-input"><span class="extra-span"></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-3" class="otp-single-input"><span class="extra-span"></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-4" class="otp-single-input"><span class="extra-span"></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-5" class="otp-single-input"><span class="extra-span"></span></div>
</div>
`;

exports[`SimpleOtpInput contents should render slot \`extra\` correctly 1`] = `
<div class="simple-otp-input">
  <div class="single-input-container"><input autocomplete="one-time-code" type="text" data-testid="otp-single-input-0" class="otp-single-input"><span class="extra-slot"><i>S</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-1" class="otp-single-input"><span class="extra-slot"><i>i</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-2" class="otp-single-input"><span class="extra-slot"><i>m</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-3" class="otp-single-input"><span class="extra-slot"><i>p</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-4" class="otp-single-input"><span class="extra-slot"><i>l</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-5" class="otp-single-input"><span class="extra-slot"><i>e</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-6" class="otp-single-input"><span class="extra-slot"><i>O</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-7" class="otp-single-input"><span class="extra-slot"><i>t</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-8" class="otp-single-input"><span class="extra-slot"><i>p</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-9" class="otp-single-input"><span class="extra-slot"><i>I</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-10" class="otp-single-input"><span class="extra-slot"><i>n</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-11" class="otp-single-input"><span class="extra-slot"><i>p</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-12" class="otp-single-input"><span class="extra-slot"><i>u</i></span></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-13" class="otp-single-input"><span class="extra-slot"><i>t</i></span></div>
</div>
`;

exports[`SimpleOtpInput focus grabber should render hidden input correctly 1`] = `
<div class="simple-otp-input">
  <div class="single-input-container"><input autocomplete="one-time-code" type="text" data-testid="otp-single-input-0" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-1" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-2" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-3" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-4" class="otp-single-input"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" data-testid="otp-single-input-5" class="otp-single-input"></div><input autocomplete="one-time-code" type="text" class="hidden-otp-input">
</div>
`;

exports[`SimpleOtpInput for Android Chrome should have correct inputmode and type for "number" 1`] = `
<div class="simple-otp-input empty">
  <div class="single-input-container"><input autocomplete="one-time-code" type="text" inputmode="tel" pattern="[ 0-9]*" data-testid="otp-single-input-0" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="tel" pattern="[ 0-9]*" data-testid="otp-single-input-1" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="tel" pattern="[ 0-9]*" data-testid="otp-single-input-2" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="tel" pattern="[ 0-9]*" data-testid="otp-single-input-3" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="tel" pattern="[ 0-9]*" data-testid="otp-single-input-4" class="otp-single-input some-class or-more-class"></div>
  <div class="single-input-container"><input autocomplete="off" type="text" inputmode="tel" pattern="[ 0-9]*" data-testid="otp-single-input-5" class="otp-single-input some-class or-more-class"></div>
</div>
`;
